# ai-healthcare

./: README.md  docling_test (1).ipynb  legacy_agent_graph.py  pyproject.toml  run_agent_cli.py
.github/workflows/: _build.yml  _test.yml  main.yml
backend/: auth.py  context.py  main.py  schemas.py  service.py
backend/agent/: __init__.py  graph.py
backend/data/: agent_state_codec.py  chat_store.py  conversation_summary.py  db.py  labs.py
backend/rag/: __init__.py  knowledge_base.py
database/: 002_rag_vector.sql  003_bedrock_cohere_v3.sql  004_lab_rls_read.sql  005_conversation_summary.sql  env.rag.example  schema.sql  seed_labs_only.sql
web/medical-chat-ui/: package-lock.json  package.json
web/medical-chat-ui/src/app/: globals.css  layout.tsx  page.tsx
web/medical-chat-ui/src/app/login/: page.tsx
web/medical-chat-ui/src/components/: chat-app.tsx  chat-input.tsx  chat-messages.tsx  chat-sidebar.tsx  login-form.tsx
web/medical-chat-ui/src/contexts/: auth-context.tsx
web/medical-chat-ui/src/lib/: api.ts  stream-api.ts  supabase.ts  types.ts
web/medical-chat-ui/src/lib/supabase/: middleware.ts
