[project]
name = "aihealthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.0",
]
